--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
         "/dist"
     ],
     "scripts": {
-        "build": "tsc && vite build"
+        "build": "tsc && vite build",
+        "test": "vitest run",
+        "test-watch": "vitest",
+        "test:ui": "vitest --ui",
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build"
     },
     "keywords": [],
     "author": "",
@@ -18,20 +23,33 @@
     "devDependencies": {
         "@draconides/eslint-config-react": "^1.2.0",
         "@draconides/eslint-config-ts": "^1.2.0",
+        "@storybook/addon-essentials": "^7.6.16",
+        "@storybook/addon-interactions": "^7.6.16",
+        "@storybook/addon-links": "^7.6.16",
+        "@storybook/addon-onboarding": "^1.0.11",
+        "@storybook/blocks": "^7.6.16",
+        "@storybook/react": "^7.6.16",
+        "@storybook/react-vite": "^7.6.16",
+        "@storybook/test": "^7.6.16",
+        "@testing-library/jest-dom": "^6.4.2",
+        "@testing-library/react": "^14.2.1",
         "@types/node": "^18.19.15",
         "@types/react": "^18.2.55",
         "eslint": "^8.56.0",
-        "sass": "^1.70.0",
-        "stylelint": "^16.2.1",
-        "stylelint-config-standard-scss": "^13.0.0",
-        "stylelint-config-twbs-bootstrap": "^14.0.0",
+        "jsdom": "^24.0.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "storybook": "^7.6.16",
+        "styled-components": "^6.1.8",
         "typescript": "^5.3.3",
-        "vite": "^5.1.1",
+        "vite": "^5.1.3",
         "vite-plugin-dts": "^3.7.2",
         "vite-plugin-eslint": "^1.8.1",
-        "vite-plugin-stylelint": "^5.3.1"
+        "vite-plugin-stylelint": "^5.3.1",
+        "vitest": "^1.2.2"
     },
     "peerDependencies": {
-        "react": "^18.2.0"
+        "react": "^18.2.0",
+        "styled-components": "^6.1.0"
     }
 }
