--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "module": "dist/index.es.js",
     "types": "dist/index.d.ts",
     "files": [
-        "/dist"
+        "dist"
     ],
     "scripts": {
         "build": "tsc && vite build",
@@ -15,11 +15,18 @@
         "test-watch": "vitest",
         "test:ui": "vitest --ui",
         "storybook": "storybook dev -p 6006",
-        "build-storybook": "storybook build"
+        "build-storybook": "storybook build",
+        "prepublishOnly": "npm run build"
     },
     "keywords": [],
     "author": "",
-    "license": "ISC",
+    "license": "MIT",
+    "dependencies": {
+        "styled-components": "^6.1.0"
+    },
+    "peerDependencies": {
+        "react": "^18.2.0"
+    },
     "devDependencies": {
         "@draconides/eslint-config-react": "^1.2.0",
         "@draconides/eslint-config-ts": "^1.2.0",
@@ -37,19 +44,13 @@
         "@types/react": "^18.2.55",
         "eslint": "^8.56.0",
         "jsdom": "^24.0.0",
-        "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "storybook": "^7.6.16",
-        "styled-components": "^6.1.8",
         "typescript": "^5.3.3",
         "vite": "^5.1.3",
         "vite-plugin-dts": "^3.7.2",
         "vite-plugin-eslint": "^1.8.1",
         "vite-plugin-stylelint": "^5.3.1",
         "vitest": "^1.2.2"
-    },
-    "peerDependencies": {
-        "react": "^18.2.0",
-        "styled-components": "^6.1.0"
     }
 }
