--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "@testing-library/react": "^14.2.1",
         "@types/node": "^18.19.15",
         "@types/react": "^18.2.55",
+        "@vitest/ui": "^1.2.2",
         "eslint": "^8.56.0",
         "jsdom": "^24.0.0",
         "react-dom": "^18.2.0",
