--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,20 +1,6 @@
 {
     "extends": [
-        "stylelint-config-standard-scss",
-        "stylelint-config-twbs-bootstrap"
+        "stylelint-config-standard"
     ],
-    "rules": {
-        "declaration-no-important": null,
-        "scss/dollar-variable-default": [
-            true,
-            {
-                "ignore": "local"
-            }
-        ],
-        "selector-max-class": null,
-        "selector-max-type": null,
-        "selector-no-qualifying-type": null,
-        "selector-max-id": 3,
-        "selector-max-attribute": 3
-    }
+    "customSyntax": "postcss-styled-syntax"
 }
