--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
         "test": "vitest run",
         "test-watch": "vitest",
         "test:ui": "vitest --ui",
+        "lint": "eslint \"{src,apps,libs,test}/**/*.{tsx,ts}\" --fix",
+        "lint:test": "eslint \"{src,apps,libs,test}/**/*.{tsx,ts}\"",
+        "stylelint": "stylelint \"{src,public}/**/*.scss\" --fix",
+        "stylelint:test": "stylelint \"{src,public}/**/*.scss\"",
         "storybook": "storybook dev -p 6006",
         "build-storybook": "storybook build",
         "prepublishOnly": "npm run build"
@@ -45,8 +49,11 @@
         "@vitest/ui": "^1.2.2",
         "eslint": "^8.56.0",
         "jsdom": "^24.0.0",
+        "postcss-styled-syntax": "^0.6.4",
         "react-dom": "^18.2.0",
         "storybook": "^7.6.16",
+        "stylelint": "^16.2.1",
+        "stylelint-config-standard": "^36.0.0",
         "typescript": "^5.3.3",
         "vite": "^5.1.3",
         "vite-plugin-dts": "^3.7.2",
