feat: add Link components and css variables

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,8 +13,6 @@
         "@draconides/eslint-config-react"
     ],
     "rules": {
-        "react/no-unknown-property": [
-            "off"
-        ]
+        "react/no-unknown-property": "off"
     }
 }
